third_party/move/move-compiler-v2/tests/checking/unused/private_call_3.exp

Diagnostics:
warning: Function `0x42::m::inaccessible` is unused: it has no current callers and is private to its module.
  ┌─ tests/checking/unused/private_call_3.move:8:16
  │
8 │     inline fun inaccessible(): u64 {
  │                ^^^^^^^^^^^^

warning: Function `0x42::m_nonfriend::inaccessible` is unused: it has no current callers and is private to its module.
   ┌─ tests/checking/unused/private_call_3.move:24:16
   │
24 │     inline fun inaccessible(): u64 {
   │                ^^^^^^^^^^^^

warning: Function `0x42::m_nonfriend::friend_accessible` is unused: it has no current callers and is `public(friend)` but its module has no friends.
   ┌─ tests/checking/unused/private_call_3.move:28:31
   │
28 │     public(friend) inline fun friend_accessible(): u64 {
   │                               ^^^^^^^^^^^^^^^^^

warning: Function `0x42::o::inaccessible` may be unused: it has callers, but none with access.
   ┌─ tests/checking/unused/private_call_3.move:46:16
   │
46 │     inline fun inaccessible(): u64 {
   │                ^^^^^^^^^^^^

error: inline function `0x42::o::inaccessible` cannot be called from function `0x42::n::test` because it is private to module `0x42::o`
   ┌─ tests/checking/unused/private_call_3.move:46:16
   │
46 │     inline fun inaccessible(): u64 {
   │                ^^^^^^^^^^^^ callee
   ·
93 │     assert!(o::inaccessible() == 42, 1);
   │             ----------------- called here

warning: Function `0x42::o_nonfriend::inaccessible` may be unused: it has callers, but none with access.
   ┌─ tests/checking/unused/private_call_3.move:72:16
   │
72 │     inline fun inaccessible(): u64 {
   │                ^^^^^^^^^^^^

error: inline function `0x42::o_nonfriend::inaccessible` cannot be called from function `0x42::n::test2` because it is private to module `0x42::o_nonfriend`
   ┌─ tests/checking/unused/private_call_3.move:72:16
   │
72 │     inline fun inaccessible(): u64 {
   │                ^^^^^^^^^^^^ callee
   ·
99 │     assert!(o_nonfriend::inaccessible() == 42, 1);
   │             --------------------------- called here
